<resources>
    <string name="app_name">Platform</string>
    <string name="settings_toolbar_title">Settings</string>
    <string name="settings_save_changes">Save changes</string>
    <string name="settings_discard_changes">Discard changes</string>
    <string name="settings_account_tab">Account</string>
    <string name="settings_accessibility_tab">Accessibility</string>
    <string name="settings_preferences_tab">Preferences</string>
    <string name="settings_profile_info">Profile Info</string>
    <string name="settings_first_name">First name</string>
    <string name="settings_last_name">Last name</string>
    <string name="settings_profile_picture">Profile picture</string>
    <string name="settings_profile_picture_image">Profile picture image</string>
    <string name="settings_edit">Edit</string>
    <string name="settings_account_info">Account Info</string>
    <string name="settings_email">Email Address</string>
    <string name="settings_user_name">User name</string>
    <string name="settings_change_password">Change password</string>
    <string name="settings_personal_info">Personal Info</string>
    <string name="settings_date_of_birth">Date of birth</string>
    <string name="settings_education_info">Education Info</string>
    <string name="settings_education_level">Education level</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SignActivity_login">Login</string>
    <string name="SignActivity_sign_in_wit">Sign in with your data that you entered during your registration.</string>
    <string name="SignActivity_email">Email</string>
    <string name="SignActivity_email_hint">name@example.com</string>
    <string name="SignActivity_password">Password</string>
    <string name="SignActivity_password_hint">min. 8 characters</string>
    <string name="switch_label">enabled</string>
    <string name="SignActivity_keep_login">Keep me logged in</string>
    <string name="SignActivity_dont_have_account">Don’t have an account? </string>
    <string name="SignActivity_sign_up">Sign Up</string>
    <string name="SignActivity_forgot_password">Forgot password</string>
    <string name="AccessibilityImportance_img_description">A Girl reviewing her lessons using her laptop.</string>
    <string name="SignActivity_card2_world_img_description">Education connects you to the world.</string>
    <string name="SignActivity_ViewPager_item2_title">Accessibility</string>
    <string name="SignActivity_ViewPager_item1_title">Education for all</string>
    <string name="login_cards_description">login_cards</string>
    <string name="SignActivity_on_boarding_screens_are_shown">on boarding screens are shown</string>
    <string name="create_your_account">Create your Account</string>
    <string name="in_just_a_few_seconds">In just a few seconds</string>
    <string name="let_s_fill_up_the_basic_info_about_you">Let’s fill up the basic info about you</string>
    <string name="first_name">First Name</string>
    <string name="type_your_first_name">Type your first name</string>
    <string name="second_name">Second Name</string>
    <string name="type_your_second_name">Type your second name</string>
    <string name="username">Username</string>
    <string name="platform">Platform</string>
    <string name="home">home</string>
    <string name="edit">edit</string>
    <string name="search_articles_using_this_item">search articles using this item</string>
    <string name="your_notifications_are_here">your notifications are here!</string>
    <string name="notifications">Notifications</string>
    <string name="search_icon">search_icon</string>
    <string name="settings">settings</string>
    <string name="go_to_settings_from_here">go to settings from here</string>
    <string name="search">Search</string>
    <string name="favourite_authors">Favourite Authors</string>
    <string name="author">author</string>
    <string name="following">Following</string>
    <string name="collections">Collections</string>
    <string name="_5">5</string>
    <string name="add_this_author_s_collection_to_your_collections">add this author\'s collection to your collections</string>
    <string name="lesson_viewed">lesson viewed</string>
</resources>