<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--    <item-->
<!--        android:id="@+id/search_badge"-->
<!--        android:title="@string/search_icon"-->
<!--        android:contentDescription="@string/search_articles_using_this_item"-->
<!--        android:icon="@drawable/ic_search"-->
<!--        app:showAsAction="ifRoom" />-->

    <item
        android:id="@+id/favourite"
        android:icon="@drawable/ic_notifications"
        android:contentDescription="@string/your_notifications_are_here"
        android:title="@string/notifications"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:contentDescription="@string/go_to_settings_from_here"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"
        />

</menu>