<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    android:id="@+id/drawer_layout">

    <com.example.platform.MyConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/parent_constraint">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="true"
                app:menu="@menu/top_app_bar"
                app:navigationIcon="@drawable/ic_menu"
                app:title="@string/platform">

                <EditText
                    android:id="@+id/search_box"
                    android:layout_width="224dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="25dp"
                    android:background="@drawable/search_box"
                    android:hint="@string/search"
                    android:imeOptions="actionSearch"
                    android:importantForAutofill="no"
                    android:inputType="textAutoComplete|textAutoCorrect|textMultiLine"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp" />
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:layout_constraintVertical_bias="0.0">

        </FrameLayout>
    </com.example.platform.MyConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/light_gray"
        android:maxWidth="280dp"
        app:headerLayout="@layout/main_navigation_drawer_header"
        app:itemIconTint="@color/main_selected_navigation_item_icon_color"
        app:itemShapeAppearanceOverlay="@style/drawer_corners_shape"
        app:itemShapeFillColor="@color/main_navigation_item_background_color"
        app:itemTextColor="@color/main_selected_navigation_item_icon_color"
        app:menu="@menu/main_navigation_drawer_menu"
        app:subheaderColor="@color/dark_gray">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                style="@style/Widget.Material3.Button.TextButton.Icon"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="8dp"
                android:text="@string/app_name"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:icon="@drawable/main_settings_icon"
                app:iconPadding="8dp"
                app:iconSize="24dp"
                app:iconTint="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/button3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/button3"
                app:shapeAppearance="@style/drawer_corners_shape" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.Material3.Button.TextButton.Icon"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/app_name"
                android:textAlignment="viewStart"
                android:textColor="@color/ErrorColor"
                android:textSize="14sp"
                app:icon="@drawable/main_logout_icon"
                app:iconPadding="8dp"
                app:iconSize="24dp"
                app:iconTint="@color/ErrorColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:shapeAppearance="@style/drawer_corners_shape" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>
